--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -7,7 +7,7 @@
         <label for="usersame">Nombre de usuario:</label>
         <input tyoe="text" name="username">
 
-        <label for="password">Nombre de usuario:</label>
+        <label for="password">Contraseña</label>
         <input type="password" name="password">
 
         <input type="submit" value="Registrarse">
