--- a/core/templates/cpassword.html
+++ b/core/templates/cpassword.html
@@ -2,7 +2,7 @@
 
 <h1>{{tittle}}</h1>
 
-    <from method="post" action="">
+    <from method="post" action="password">
         {% csrf_token %}
 
         <label for="password">Contraseña:</label>
@@ -14,7 +14,7 @@
         <label for="comfirmpassword">Comfirmar contraseña:</label>
         <input type="password" name="comfirmpassword">
 
-        <input type="submit" value="Registrarse">
+        <input type="submit" value="cambiar contraseña">
 
     </from>
 
