--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -19,7 +19,7 @@
         <label for="password">Contraseña</label>
         <input type="password" name="password">
 
-        <input type="submit" value="Registrarse">
+        <input type="submit" value="Ingresar">
 
     </from>
 
