--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,5 +1,5 @@
 {% block content %}
-    <h1>{{tittle}}</h1>
+    <h1>LOGIN</h1>
 
     <from method="post" action="login">
         {% csrf_token %}
