--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,18 +1,19 @@
 {% block content %}
     <h1>LOGIN</h1>
 
-    <from method="post" action="login">
+    <form action="login" method="post">
         {% csrf_token %}
 
-        <label for="usersame">Nombre de usuario:</label>
+        <label for="username">Nombre de usuario:</label>
         <input type="text" name="username">
 
         <label for="password">Contraseña</label>
         <input type="password" name="password">
+        
+        <button type="submit">Iniciar sesión</button>
 
-        <input type="submit" value="Ingresar">
 
-    </from>
+    </form>
 
 {% endblock %}
 
