--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -5,7 +5,7 @@
 
     <button href="{% url 'cpaassword' %}">cambiar Contraseña</button>
     <button href="{% url 'desbloqueo' %}">cambiar Contraseña</button>
-    <button href="{% url 'fechadeexpiracion' %}">cambiar Contraseña</button>
+    <button href="{% url 'fechaexpi' %}">cambiar Contraseña</button>
 
         <input type="submit" value="Enviar">
 
