--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -2,14 +2,13 @@
 
 <form method="get" action="menu">
 
-
-    <button href="{% url 'cpaassword' %}">cambiar Contraseña</button>
-    <button href="{% url 'desbloqueo' %}">cambiar Contraseña</button>
-    <button href="{% url 'fechaexpi' %}">cambiar Contraseña</button>
+    <button type="button">cambiar contraseña</button>
+    <button type="button">Desbloquear usuario</button>
+    <button type="button">Fecha de expiracion</button>
 
         <input type="submit" value="Enviar">
 
     </form>
     
 
-{% end block %}
+{% endblock %}
