--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -1,15 +1,16 @@
 {% block content %}
 
-<h1>Menú Principal</h1>
+<h1>Bienvenido unidad TI</h1>
+
 <form action="{% url 'cpassword' %}" method="get">
     <button type="submit1">Cambiar contraseña</button>
 </form>
 
-<form action="{% url 'desbloqueo' %}" method="get">
+<form action2="{% url 'desbloqueo' %}" method="get">
     <button type="submit2">Desbloqueo</button>
 </form>
 
-<form action="{% url 'fechaexpi' %}" method="get">
+<form action3="{% url 'fechaexpi' %}" method="get">
     <button type="submit3">Fecha de expiracion</button>
 </form>
     
