--- a/core/templates/fechaexpi.html
+++ b/core/templates/fechaexpi.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fecha de expiracion</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
+
+    <h1>Fecha de expiracion</h1>
+
+    <form action="/buscar" method="post">
+    <input type="text" name="username" placeholder="Buscar por username">
+    <button type="submit">Buscar</button>
+
 </body>
 </html>
