--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -3,15 +3,15 @@
 <h1>Bienvenido unidad TI</h1>
 
 <form action="{% url 'cpassword' %}" method="get">
-    <button type="submit1">Cambiar contraseña</button>
+    <button type="submit">Cambiar contraseña</button>
 </form>
 
-<form action2="{% url 'desbloqueo' %}" method="get">
-    <button type="submit2">Desbloqueo</button>
+<form action="{% url 'desbloqueo' %}" method="get">
+    <button type="submit">Desbloqueo</button>
 </form>
 
-<form action3="{% url 'fechaexpi' %}" method="get">
-    <button type="submit3">Fecha de expiracion</button>
+<form action="{% url 'fechaexpi' %}" method="get">
+    <button type="submit">Fecha de expiracion</button>
 </form>
     
 
