--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,4 +1,6 @@
 {% block content %}
+
+<head><img src="/core/static/imagenes/logo.jpg" alt=""></head>
     <h1>LOGIN</h1>
 
     <form action="{% url 'menu' %}" method="post">
@@ -12,6 +14,11 @@
         
         <input type="submit" value="ingresar" />
 
+
+        <div class="footer">
+            <h3>Desarollado por la unidad especializada de TI- Comfenalco TOLIMA - 2023</h3>
+            <img src="/core/static/imagenes/logo.jpg">
+        </div>
 
     </form>
 
